[tool.poetry]
name = "aioetherscan"
version = "0.9.5"
description = "Etherscan API async Python wrapper"
authors = [
  "ape364 <ape364@gmail.com>",
  "Pellegrino Prevete <pellegrinoprevete@gmail.com>",
  "truocolo <truocolo@aol.com>",
]
license = "AGPL3"
homepage = "https://github.com/themartiancompany/aioetherscan"
exclude = [
  "aioetherscan/*.pyx",
  "aioetherscan/modules/*.pyx",
  "aioetherscan/modules/extra/*.pyx",
  "aioetherscan/modules/extra/generators/*.pyx",
  "aioetherscan/*.c",
  "aioetherscan/modules/*.c",
  "aioetherscan/modules/extra/*.c",
  "aioetherscan/modules/extra/generators/*.c",
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.4"
asyncio_throttle = "^1.0.1"
aiohttp-retry = "^2.8.3"
cython = "^3.0.11"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.5.0"
coveralls = "^3.3.1"

[build-system]
requires = [
  "poetry>=0.12",
  "cython",
  "setuptools"]
build-backend = "poetry.masonry.api"

[tool.setuptools]
include-package-data = false

[tool.pytest.ini_options]
pythonpath = [
    "aioetherscan"
]
asyncio_mode = "auto"

[tool.coverage.run]
relative_files = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
