[tool.poetry]
name = "aioetherscan"
version = "0.9.6"
description = "Etherscan API async Python wrapper"
authors = [
  "ape364 <ape364@gmail.com>",
  "Pellegrino Prevete <pellegrinoprevete@gmail.com>",
  "truocolo <truocolo@aol.com>",
]
maintainers = [
  "Pellegrino Prevete <pellegrinoprevete@gmail.com>",
  "truocolo <truocolo@aol.com>",
]
license = "AGPL3"
homepage = "https://github.com/themartiancompany/aioetherscan"
include = [
 { path = "aioetherscan/*.pyx", format = "sdist" },
 { path = "aioetherscan/*.so", format = "wheel" },
 { path = "aioetherscan/modules/*.pyx", format = "sdist" },
 { path = "aioetherscan/modules/*.so", format = "wheel" },
 { path = "aioetherscan/modules/extra/*.pyx", format = "sdist" },
 { path = "aioetherscan/modules/extra/*.so", format = "wheel" },
 { path = "aioetherscan/modules/extra/generators/*.pyx", format = "sdist" },
 { path = "aioetherscan/modules/extra/generators/*.so", format = "wheel" },
]
exclude = [
 { path = "aioetherscan/*.pyx", format = "wheel" },
 { path = "aioetherscan/*.c", format = ["sdist", "wheel"] },
 { path = "aioetherscan/*.so", format = "sdist" },
 { path = "aioetherscan/modules/*.pyx", format = "wheel" },
 { path = "aioetherscan/modules/*.c", format = ["sdist", "wheel"] },
 { path = "aioetherscan/modules/*.so", format = "sdist" },
 { path = "aioetherscan/modules/extra/*.pyx", format = "wheel" },
 { path = "aioetherscan/modules/extra/*.c", format = ["sdist", "wheel"] },
 { path = "aioetherscan/modules/extra/*.so", format = "sdist" },
 { path = "aioetherscan/modules/extra/generators/*.pyx", format = "wheel" },
 { path = "aioetherscan/modules/extra/generators/*.c", format = ["sdist", "wheel"] },
 { path = "aioetherscan/modules/extra/generators/*.so", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.4"
asyncio_throttle = "^1.0.1"
aiohttp-retry = "^2.8.3"
cython = "^3.0.11"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.5.0"
coveralls = "^3.3.1"

[build-system]
requires = [
  "poetry>=0.12",
  "cython",
  "setuptools"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "aioetherscan"
]
asyncio_mode = "auto"

[tool.coverage.run]
relative_files = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
